--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <li>Internal <strong>CSS</strong> for basic styling</li>
         </ul>
 
-        <p>To view this, save the code as <code>index.html</code> and open it in any web browser.</p>
+        <p>This Page is Created to understand git and github.</p>
         
         <button onclick="showAlert()">Click Me!</button>
     </div>
