--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 
     <div class="container">
-        <h1>Hello, World!</h1>
+        <h1>Hello, World! Have nice day</h1>
         <p>This is a simple HTML sample file. It includes:</p>
         
         <ul>
